--- a/style/XIXcenturystyle.css
+++ b/style/XIXcenturystyle.css
@@ -9,7 +9,7 @@
 body {
   background-image: url("../images/background10.jpg");
   background-attachment: fixed;
-  background-size: contain;
+  background-size: cover;
   margin-right: 5%;
   margin-left: 5%;
 }
