--- a/style/ancient.css
+++ b/style/ancient.css
@@ -79,7 +79,7 @@ main p{
         }
         img{
             width: 300px !important;
-            margin-left: auto !important;
+            margin-left: -100px !important;
         }
         figcaption{
                     font-size: 8px;
@@ -115,7 +115,7 @@ main p{
         }
         img{
             width: 500px !important;
-            margin-left: auto !important;
+            margin-left: -10px !important;
         }
         figcaption{
                     font-size: 10px;
@@ -137,7 +137,7 @@ main p{
         }
         img{
             width: 600px !important;
-            margin-left: auto !important;
+            margin-left: 10px !important;
         }
         figcaption{
                     font-size: 17px;
