--- a/style/ancient.css
+++ b/style/ancient.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Almendra SC&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Almendra Display&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Almendra&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Uncial+Antiqua&display=swap');
 
 
   body{
@@ -11,11 +12,12 @@
                 background-color: #E7D1A2 !important;
                 margin-left: 25px;
 	  	margin-top: -100px;
+	  	
             }
         
 p::first-letter {
   font-size: 6rem;
-    font-family: 'UnifrakturMaguntia', cursive;
+    font-family: 'Uncial Antiqua';
     color: red;
 }
   
