--- a/style/slide.css
+++ b/style/slide.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 html {
 	height: 100%;
-	min-height: 500px;
+	min-height: 100%;
 	
 	background-color: #002966;
 	
