--- a/style/slide.css
+++ b/style/slide.css
@@ -1,5 +1,98 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
+body {
+	height: 100%;
+	min-height: 100%;
+	
+	background-color: #002966;
+	
+	background-image:
+		radial-gradient(
+			circle,
+			transparent 40%,
+			#999 40%,
+			#999 41%,
+			transparent 0
+			),
+		radial-gradient(
+			circle,
+			transparent 40%,
+			#999 40%,
+			#999 41%,
+			transparent 0
+			),
+		radial-gradient(
+			circle,
+			transparent 40%,
+			#999 40%,
+			#999 41%,
+			transparent 0
+			),
+		radial-gradient(
+			circle,
+			transparent 40%,
+			#999 40%,
+			#999 41%,
+			transparent 0
+			),
+		radial-gradient(
+			circle,
+			transparent 40%,
+			#999 40%,
+			#999 41%,
+			transparent 0
+			),
+		radial-gradient(
+			circle,
+			transparent 40%,
+			#999 40%,
+			#999 41%,
+			transparent 0
+			),
+		radial-gradient(
+			circle,
+			transparent 40%,
+			#999 40%,
+			#999 41%,
+			transparent 0
+			);
+	
+	background-position:
+		50% 50%;
+	background-size:
+		200% 200%,
+		150% 150%,
+		100% 100%,
+		60% 60%,
+		40% 40%,
+		20% 20%,
+		5% 5%;
+	background-repeat: no-repeat;
+	
+	animation: 1s impact linear infinite;
+	}
 
+@keyframes impact {
+	0% {		
+		background-size:
+			200% 200%,
+			150% 150%,
+			100% 100%,
+			60% 60%,
+			40% 40%,
+			20% 20%,
+			5% 5%;
+		}
+	100% {		
+		background-size:
+			250% 250%,
+			200% 200%,
+			150% 150%,
+			100% 100%,
+			60% 60%,
+			40% 40%,
+			20% 20%;
+		}
+	}
 body{
             	font-family: 'Press Start 2P', cursive;
 
@@ -167,9 +260,6 @@ body{
   padding: 0px;
 }
 
-body {
-  background-color: #05182d;
-}
 
 @-webkit-keyframes backgroundAnimate {
   from {
@@ -268,5 +358,3 @@ body {
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
-
-
