--- a/style/slide.css
+++ b/style/slide.css
@@ -126,6 +126,7 @@ body{
                 display: block;
                 width: 80%;
                 margin-left: 15%;
+		opacity: 0.8;
 
 
             }
