--- a/style/ancient.css
+++ b/style/ancient.css
@@ -85,7 +85,7 @@ main p{
         }
         figcaption{
                     font-size: 8px;
-                    margin-left: 125px;
+                    margin-left: 130px;
                 }
     }
   @media only screen and (min-width: 601px){
@@ -102,8 +102,8 @@ main p{
             margin-left: 120px !important;
         }
         figcaption{
-                    font-size: 10px;
-                    margin-left: 150px;
+                    font-size: 8px;
+                    margin-left: 185px;
                 }
     }
   @media only screen and (min-width: 900px){
@@ -120,8 +120,8 @@ main p{
             margin-left: 160px !important;
         }
         figcaption{
-                    font-size: 12px;
-                    margin-left: 200px;
+                    font-size: 8px;
+		    text-align: center;
                 }
 
     }
@@ -139,11 +139,11 @@ main p{
         }
         img{
 	    width: 600px !important;
-            margin-left: 200px !important;
+            margin-left: 250px !important;
         }
         figcaption{
-                    font-size: 14px;
-                    margin-left: 350px;
+                    font-size: 10px;
+		    text-align: center;
 
 
                 }
