--- a/style/ancient.css
+++ b/style/ancient.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Uncial+Antiqua&display=swap');
 
 
-  body{
+  body{ 
                 border: 125px solid transparent;
                 border-image-source: url('../images/left_border.png');
                 border-image-slice: 0 0 0 200; 
@@ -81,8 +81,9 @@ main p{
         }
         img{
             width: 250px !important;
-            margin-left: 120px !important;
-        }
+            position: absolute;
+    	    margin: auto;
+	}
         figcaption{
                     font-size: 8px;
                     margin-left: 130px;
@@ -99,8 +100,8 @@ main p{
         }
         img{
             width: 250px !important;
-            margin-left: 120px !important;
-        }
+            position: absolute;
+    	    margin: auto;        }
         figcaption{
                     font-size: 8px;
                     margin-left: 185px;
@@ -117,7 +118,8 @@ main p{
         }
         img{
             width: 400px !important;
-            margin-left: 160px !important;
+            position: absolute;
+    	    margin: auto;
         }
         figcaption{
                     font-size: 8px;
@@ -139,8 +141,8 @@ main p{
         }
         img{
 	    width: 600px !important;
-            margin-left: 250px !important;
-        }
+            position: absolute;
+    	    margin: auto;        }
         figcaption{
                     font-size: 10px;
 		    text-align: center;
