--- a/style/slide.css
+++ b/style/slide.css
@@ -125,7 +125,7 @@ body{
                 color: black;
                 display: block;
                 width: 80%;
-                margin-left: 15%;
+                margin: auto;
 		opacity: 0.8;
 
 
