--- a/style/ancient.css
+++ b/style/ancient.css
@@ -19,6 +19,8 @@ p::first-letter {
   font-size: 6rem;
     font-family: 'Uncial Antiqua';
     color: red;
+   line-height: 70px;
+
 }
   
          h1{
