--- a/style/ancient.css
+++ b/style/ancient.css
@@ -10,7 +10,6 @@
                 border-image-slice: 0 0 0 200; 
                 border-image-repeat: repeat;
                 background-color: #E7D1A2 !important;
-                margin-left: 25px;
 	  	margin-top: -100px;
 	  	
             }
@@ -38,13 +37,11 @@ p::first-letter {
             	text-align: center;
                 font-family: Almendra;
                 font-size: 45px;
-                margin-left: 5%;
             }
             h4{
                 text-align: center;
                 font-family: Almendra;
                 font-size: 45px;
-                margin-left: 5%;
             }
 
             header p{
@@ -132,7 +129,7 @@ main p{
     @media only screen and (min-width: 1000px){
         header{
             width: 1100px;
-            margin-left: 0px;
+            margin-left: 0px !important;
         }
         main{
             width: 1200px;
