--- a/style/ancient.css
+++ b/style/ancient.css
@@ -77,8 +77,10 @@ main p{
         }
         header{
             width: 300px;
+	    margin-left: 0px !important;
         }
         main{
+	    margin-left: 0px !important;
             width: 500px;
         }
         img{
@@ -91,8 +93,12 @@ main p{
   @media only screen and (min-width: 601px){
         header{
             width: 500px;
+	    	    margin-left: 0px !important;
+
         }
         main{
+
+	    margin-left: 0px !important;
             width: 500px;
         }
         img{
@@ -109,6 +115,8 @@ main p{
         }
         main{
             width: 700px;
+	    margin-left: 0px !important;
+
         }
         img{
             width: 400px !important;
@@ -122,8 +130,11 @@ main p{
     @media only screen and (min-width: 1000px){
         header{
             width: 1100px;
+	    margin-left: 0px !important;
+
         }
         main{
+	    margin-left: 0px !important;
             width: 1200px;
         }
         p {
