--- a/style/ancient.css
+++ b/style/ancient.css
@@ -22,7 +22,9 @@ p::first-letter {
 
 }
 img{
-margin-left: 100px}
+margin-left: 120px}
+header{
+margin-left: 120px}
          h1{
                 font-family: Almendra SC;
                 font-size: 85px;
