--- a/style/ancient.css
+++ b/style/ancient.css
@@ -21,10 +21,9 @@ p::first-letter {
    line-height: 70px;
 
 }
-img, figcaption{
+img, figcaption, header{
 margin-left: 120px}
-header{
-margin-left: 140px}
+
 
          h1{
                 font-family: Almendra SC;
@@ -73,7 +72,6 @@ main p{
 
         header{
             width: 300px;
-	    margin-left: -80px !important;
         }
         main{
 	    margin-left: -100px !important;
@@ -89,7 +87,6 @@ main p{
   @media only screen and (min-width: 601px){
         header{
             width: 500px;
-	    	    margin-left:-80px !important;
 
         }
         main{
@@ -109,7 +106,6 @@ main p{
   @media only screen and (min-width: 900px){
             header{
             width: 700px;
-	    margin-left: -80px !important;
 
         }
         main{
@@ -129,7 +125,6 @@ main p{
     @media only screen and (min-width: 1000px){
         header{
             width: 1100px;
-	    margin-left: -80px !important;
 
         }
         main{
