--- a/style/ancient.css
+++ b/style/ancient.css
@@ -11,7 +11,7 @@
                 border-image-repeat: repeat;
                 background-color: #E7D1A2 !important;
 	  	margin-top: -100px;
-	  	
+	  	width: 100%;
             }
         
 p::first-letter {
@@ -106,11 +106,11 @@ main p{
     }
   @media only screen and (min-width: 900px){
             header{
-            width: 700px;
+            width: 100%;
 
         }
         main{
-            width: 700px;
+            width: 100%;
 	    margin-left: -100px !important;
 
         }
@@ -125,12 +125,12 @@ main p{
     }
     @media only screen and (min-width: 1000px){
         header{
-            width: 1100px;
+            width: 100%;
 
         }
         main{
 	    margin-left: -100px !important;
-            width: 1200px;
+            width: 100%;
         }
         p {
             margin-top: 80px;
