--- a/style/ancient.css
+++ b/style/ancient.css
@@ -125,12 +125,12 @@ main p{
     }
     @media only screen and (min-width: 1000px){
         header{
-            width: 100%;
+            width: 1300px;
 
         }
         main{
 	    margin-left: -100px !important;
-            width: 100%;
+            width: 1300px;
         }
         p {
             margin-top: 80px;
