--- a/style/ancient.css
+++ b/style/ancient.css
@@ -109,7 +109,7 @@ main p{
 
         }
         main{
-            width: 1250%;
+            width: 1250px;
 	    margin-left: -100px !important;
 
         }
