--- a/style/ancient.css
+++ b/style/ancient.css
@@ -5,7 +5,7 @@
 
 
   body{
-                border: 125px;
+                border: 125px solid;
                 border-image-source: url('../images/left_border.png');
                 border-image-slice: 0 0 0 200; 
                 border-image-repeat: repeat;
