--- a/style/ancient.css
+++ b/style/ancient.css
@@ -5,10 +5,10 @@
 
 
   body{
-                left-border: 125px solid;
-                left-border-image-source: url('../images/left_border.png');
-	        left-border-image-slice: 0 0 0 200; 
-                left-border-image-repeat: repeat;
+                border-left: 125px solid;
+                border-image-source: url('../images/left_border.png');
+	        border-image-slice: 0 0 0 200; 
+                border-image-repeat: repeat;
                 background-color: #E7D1A2 !important;
 	  	margin-top: -100px;
             }
