--- a/style/slide.css
+++ b/style/slide.css
@@ -123,9 +123,12 @@ body{
             }
             #vid{
                 color: black;
-                display: block;
-                width: 80%;
-                margin: auto;
+    		top: 50%;
+    		left: 50%;
+   		width:30em;
+   	 	height:18em;
+    		margin-top: -9em; /*set to a negative number 1/2 of your height*/
+    		margin-left: -15em;
             }
             #headerVd{
                 width: inherit;
