--- a/style/slide.css
+++ b/style/slide.css
@@ -198,6 +198,13 @@ body{
 	margin-top: 10%;
 	height: 400px;
 	width: 500px;
+	position:fixed;
+   	top: 50%;
+    	left: 50%;
+    	width:30em;
+    	height:18em;
+    	margin-top: -9em; /*set to a negative number 1/2 of your height*/
+    	margin-left: -15em
 	}
 #footerid{
 	height: 45px;
