--- a/style/slide.css
+++ b/style/slide.css
@@ -146,7 +146,10 @@ body{
                 background-color: gray;
 		opacity: 0.8;
             }
-
+	    #vid{    
+                margin: 0 auto;
+     		max-width: 700px;
+		}
             #clicks{
                 color: black;
             }
