--- a/style/slide.css
+++ b/style/slide.css
@@ -147,8 +147,12 @@ body{
 		opacity: 0.8;
             }
 	    #vid{    
-                margin: 0 auto;
-     		max-width: 700px;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 		}
             #clicks{
                 color: black;
