--- a/style/slide.css
+++ b/style/slide.css
@@ -1,119 +1,120 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 body {
-	height: 100%;
-	min-height: 100%;
-	
-	background-color: #002966;
-	
-	background-image:
-		radial-gradient(
-			circle,
-			transparent 40%,
-			#999 40%,
-			#999 41%,
-			transparent 0
-			),
-		radial-gradient(
-			circle,
-			transparent 40%,
-			#999 40%,
-			#999 41%,
-			transparent 0
-			),
-		radial-gradient(
-			circle,
-			transparent 40%,
-			#999 40%,
-			#999 41%,
-			transparent 0
-			),
-		radial-gradient(
-			circle,
-			transparent 40%,
-			#999 40%,
-			#999 41%,
-			transparent 0
-			),
-		radial-gradient(
-			circle,
-			transparent 40%,
-			#999 40%,
-			#999 41%,
-			transparent 0
-			),
-		radial-gradient(
-			circle,
-			transparent 40%,
-			#999 40%,
-			#999 41%,
-			transparent 0
-			),
-		radial-gradient(
-			circle,
-			transparent 40%,
-			#999 40%,
-			#999 41%,
-			transparent 0
-			);
-	
-	background-position:
-		50% 50%;
-	background-size:
-		200% 200%,
-		150% 150%,
-		100% 100%,
-		60% 60%,
-		40% 40%,
-		20% 20%,
-		5% 5%;
-	background-repeat: no-repeat;
-	
-	animation: 1s impact linear infinite;
-	}
+    height: 100%;
+    min-height: 100%;
+    
+    background-color: #002966;
+    
+    background-image:
+        radial-gradient(
+            circle,
+            transparent 40%,
+            #999 40%,
+            #999 41%,
+            transparent 0
+            ),
+        radial-gradient(
+            circle,
+            transparent 40%,
+            #999 40%,
+            #999 41%,
+            transparent 0
+            ),
+        radial-gradient(
+            circle,
+            transparent 40%,
+            #999 40%,
+            #999 41%,
+            transparent 0
+            ),
+        radial-gradient(
+            circle,
+            transparent 40%,
+            #999 40%,
+            #999 41%,
+            transparent 0
+            ),
+        radial-gradient(
+            circle,
+            transparent 40%,
+            #999 40%,
+            #999 41%,
+            transparent 0
+            ),
+        radial-gradient(
+            circle,
+            transparent 40%,
+            #999 40%,
+            #999 41%,
+            transparent 0
+            ),
+        radial-gradient(
+            circle,
+            transparent 40%,
+            #999 40%,
+            #999 41%,
+            transparent 0
+            );
+    
+    background-position:
+        50% 50%;
+    background-size:
+        200% 200%,
+        150% 150%,
+        100% 100%,
+        60% 60%,
+        40% 40%,
+        20% 20%,
+        5% 5%;
+    background-repeat: no-repeat;
+    
+    animation: 1s impact linear infinite;
+    }
 
 @keyframes impact {
-	0% {		
-		background-size:
-			200% 200%,
-			150% 150%,
-			100% 100%,
-			60% 60%,
-			40% 40%,
-			20% 20%,
-			5% 5%;
-		}
-	100% {		
-		background-size:
-			250% 250%,
-			200% 200%,
-			150% 150%,
-			100% 100%,
-			60% 60%,
-			40% 40%,
-			20% 20%;
-		}
-	}
+    0% {        
+        background-size:
+            200% 200%,
+            150% 150%,
+            100% 100%,
+            60% 60%,
+            40% 40%,
+            20% 20%,
+            5% 5%;
+        }
+    100% {      
+        background-size:
+            250% 250%,
+            200% 200%,
+            150% 150%,
+            100% 100%,
+            60% 60%,
+            40% 40%,
+            20% 20%;
+        }
+    }
 body{
-            	font-family: 'Press Start 2P', cursive;
+                font-family: 'Press Start 2P', cursive;
 
-}
+            }
             p{
                 display: none
             }
             header{
                 display: none;
             }
-            figure{
+            figure{ 
                 display: none;
             }
             h4{
                 display: none;
             }
+
             q{
                 display: none;
             }
-            #btn1{
-                height: 100%;
+            #btn1{ 
+                height: 100%
                 background-color: gray;
             }
             #TableA{
@@ -121,22 +122,30 @@ body{
                 color: #4CC3EB;
                 height: 100%;
             }
+            #vid{
 
+    margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+            }
             #headerVd{
-                width: inherit;
+                width: 950px;
                 height: 50px;
                 background-color: gray;
-		opacity: 0.8;
             }
             #bodyvid{
                 padding: 3%;
-                width: inherit;
-                height: 250px;
+                width: 950px;
+                height: 450px;
                 background-color: black;
                 color: #4CC3EB;
-            	font-family: 'Press Start 2P', cursive;
+                font-family: 'Dancing Script', cursive;
+                font-size: 17px;
+                line-height: 1.5;
                 text-align: center;
-
 
 
             }
@@ -144,16 +153,8 @@ body{
                 width: inherit;
                 height: 50px;
                 background-color: gray;
-		opacity: 0.8;
             }
-	    #vid{    
-  position: absolute;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-		}
+
             #clicks{
                 color: black;
             }
@@ -169,102 +170,118 @@ body{
                 width: 50%;
                 height: 70%;
             }
+            @media only screen and (max-width: 600px){
+#vid{
 
-
-@-webkit-keyframes backgroundAnimate {
-  from {
-    left: 0;
-    top: 0;
-  }
-  to {
-    left: -10000px;
-    top: -2000px;
-  }
+    margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+    }
+    p{
+        font-size: 2px;
+    }
+#footerid{
+    width: 300px;
+    height: 35px;
+   }
+#headerVd{
+     width: 300px;
+    height: 35px;
 }
+.glyphicon{
 
-@-moz-keyframes backgroundAnimate {
-  from {
-    left: 0;
-    top: 0;
-  }
-  to {
-    left: -10000px;
-    top: -2000px;
-  }
+    font-size: 30px;
 }
+#bodyvid{
+     width: 300px;
+    height:150px;       
+    font-size: 4px;
 
-@-o-keyframes backgroundAnimate {
-  from {
-    left: 0;
-    top: 0;
-  }
-  to {
-    left: -10000px;
-    top: -2000px;
-  }
-}
 
-@keyframes backgroundAnimate {
-  from {
-    left: 0;
-    top: 0;
-  }
-  to {
-    left: -10000px;
-    top: -2000px;
-  }
 }
+}
+@media only screen and (min-width: 601px) {
+#vid{
+    margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+    }
+#footerid{
+    height: 45px;
+    width: 500px;
 
-#back {
-  background: url(http://www.tranexnet.com/img/back.png) repeat 20% 20%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0.4;
-  z-index: -1;
-  -webkit-animation-name: backgroundAnimate;
-  -webkit-animation-duration: 500s;
-  -webkit-animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-name: backgroundAnimate;
-  -moz-animation-duration: 5s;
-  -moz-animation-timing-function: linear;
-  -moz-animation-iteration-count: infinite;
-  -o-animation-name: backgroundAnimate;
-  -o-animation-duration: 500s;
-  -o-animation-timing-function: linear;
-  -o-animation-iteration-count: infinite;
-  animation-name: backgroundAnimate;
-  animation-duration: 500s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
+   }
+#headerVd{
+    height: 45px;
+    width: 500px;
 }
+.glyphicon{
+    font-size: 35px;
+}
+#bodyvid{
+    height:300px;
+    width: 500px;
+    font-size: 12px;
 
-#front {
-  background: url(http://www.tranexnet.com/img/front.png) repeat 35% 35%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0.6;
-  z-index: -1;
-  -webkit-animation-name: backgroundAnimate;
-  -webkit-animation-duration: 300s;
-  -webkit-animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-name: backgroundAnimate;
-  -moz-animation-duration: 300s;
-  -moz-animation-timing-function: linear;
-  -moz-animation-iteration-count: infinite;
-  -o-animation-name: backgroundAnimate;
-  -o-animation-duration: 300s;
-  -o-animation-timing-function: linear;
-  -o-animation-iteration-count: infinite;
-  animation-name: backgroundAnimate;
-  animation-duration: 300s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
 }
+    }
+@media only screen and (min-width: 900px){
+#vid{
+    margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+    }
+#footerid{
+    height: 55px;
+    width: 800px;
+   }
+#headerVd{
+    height: 55px;
+    width: 800px;
+}
+.glyphicon{
+    font-size: 50px;
+}
+#bodyvid{
+    height:400px;
+    width: 800px;
+    font-size: 14px;
+
+}
+    }
+@media only screen and (min-width: 1200px){
+#vid{
+    margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+    }
+#footerid{
+    height: 60px;
+    width: 900px;
+   }
+#headerVd{
+    height: 60px;
+    width: 900px;
+
+}
+.glyphicon{
+    font-size: 55px;
+}
+#bodyvid{
+    height:400px;
+    font-size: 16px;
+    width: 900px;
+
+}}
